mobile/android/geckoview/src/androidTest/java/org/mozilla/geckoview/test/DynamicToolbarTest.kt
@@ -1120,4 +1120,86 @@ class DynamicToolbarTest : BaseSessionTest() {
 
         assertThat("click event", clickEventPromise.value as Boolean, equalTo(true))
     }
+
+    @WithDisplay(height = SCREEN_HEIGHT, width = SCREEN_WIDTH)
+    @Test
+    fun hitTestOnPositionStickyOnMainThread() {
+        val dynamicToolbarMaxHeight = SCREEN_HEIGHT / 2
+        sessionRule.display?.run { setDynamicToolbarMaxHeight(dynamicToolbarMaxHeight) }
+
+        // Set active since setVerticalClipping call affects only for foreground tab.
+        mainSession.setActive(true)
+
+        mainSession.loadTestPath(BaseSessionTest.POSITION_STICKY_ON_MAIN_THREAD_HTML_PATH)
+        mainSession.waitForPageStop()
+        mainSession.flushApzRepaints()
+
+        // Scroll to the bottom edge first.
+        val scrollPromise = mainSession.evaluatePromiseJS(
+            """
+            new Promise(resolve => {
+                window.addEventListener('scroll', () => {
+                    resolve(true);
+                }, { once: true });
+            });
+            """.trimIndent(),
+        )
+        mainSession.waitForRoundTrip()
+        mainSession.evaluateJS(
+            """
+            document.scrollingElement.scrollTo(0, document.scrollingElement.scrollHeight);
+            """.trimIndent(),
+        )
+
+        assertThat("scroll", scrollPromise.value as Boolean, equalTo(true))
+        mainSession.flushApzRepaints()
+
+        var clickEventPromise = mainSession.evaluatePromiseJS(
+            """
+            new Promise(resolve => {
+                document.querySelectorAll('button').forEach(element => {
+                    element.addEventListener('click', event => {
+                        resolve(event.target.id);
+                    }, { once: true });
+                });
+            });
+            """.trimIndent(),
+        )
+
+        // Explicitly call `waitForRoundTrip()` to make sure the above event listener
+        // has set up in the content.
+        mainSession.waitForRoundTrip()
+
+        // Simulate the dynamic toolbar being hidden by the scroll
+        sessionRule.display?.run { setVerticalClipping(-dynamicToolbarMaxHeight) }
+
+        // To make sure the dynamic toolbar height has been reflected into APZ.
+        mainSession.flushApzRepaints()
+        // Also to make sure the dynamic toolbar height has been reflected on the main-thread.
+        mainSession.promiseAllPaintsDone()
+
+        // Click a point where the dynamic toolbar was covering originally.
+        mainSession.synthesizeTap(SCREEN_WIDTH / 2, SCREEN_HEIGHT - dynamicToolbarMaxHeight / 4)
+        assertThat("click event on sticky", clickEventPromise.value as String, equalTo("sticky"))
+
+        clickEventPromise = mainSession.evaluatePromiseJS(
+            """
+            new Promise(resolve => {
+                document.querySelectorAll('button').forEach(element => {
+                    element.addEventListener('click', event => {
+                        resolve(event.target.id);
+                    }, { once: true });
+                });
+            });
+            """.trimIndent(),
+        )
+
+        mainSession.waitForRoundTrip()
+
+        mainSession.synthesizeTap(
+            SCREEN_WIDTH / 2,
+            SCREEN_HEIGHT - dynamicToolbarMaxHeight - dynamicToolbarMaxHeight / 4,
+        )
+        assertThat("click event on not-sticky", clickEventPromise.value as String, equalTo("not-sticky"))
+    }
 }
